# Logger

./: CMakeLists.txt  README.md
doc/: Doxyfile
include/Logger/: Logger.hpp
sample/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo.cpp  demo2.cpp  example  testLogger.cpp
src/: Logger.cpp  Progress.cpp
